tests/init/pos/early-promote-simple.scala
class P() {
    val a = 1
    List(this)
}