tests/init/neg/constant.scala
class A {
  final val a = b
  final val b = 4
}